--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+    <header class="header">
+        <a href="" class="header_logo">Logoooooo</a>
+    </header>
 </body>
 </html>
