--- a/index.html
+++ b/index.html
@@ -15,8 +15,38 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+<div class="wrapper">
     <header class="header">
-        <a href="" class="header_logo">Logoooooo</a>
+        <div class="container header_inner">
+            <a href="index.html" class="logo">
+                <span class="logo_text">Play</span>ground
+            </a>
+            <nav class="header_menu">
+                <ul class="header_menu-list">
+                    <li class="header_menu-item">
+                        <a href="#" class="header_menu-link">
+                            Events
+                        </a>
+                    </li>
+                    <li class="header_menu-item">
+                        <a href="#" class="header_menu-link">
+                            Pricing
+                        </a>
+                    </li>
+                    <li class="header_menu-item">
+                        <a href="#" class="header_menu-link">
+                            Blog
+                        </a>
+                    </li>
+                    <li class="header_menu-item">
+                        <a href="#" class="header_menu-link header_menu-login">
+                            Login
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
+</div>
 </body>
 </html>
