--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
             </nav>
         </div>
     </header>
+    <section class="banner">
+        <div class="container">
+            <h1 class="banner_heading">The Kids playground</h1>
+            <p class="banner_desc">The playground, design by nonprofit organization to be accessible for all children</p>
+            <div class="banner_buttons">
+                <a href="#" class="btn btn--border btn--rounded">Explore</a>
+                <a href="#" class="btn btn--primary btn--rounded">Buy Tickets</a>
+            </div>
+        </div>
+    </section>
 </div>
 </body>
 </html>
