add Block Banner p2

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PSD to HTML</title>
@@ -53,8 +54,42 @@
             <p class="banner_desc">The playground, design by nonprofit organization to be accessible for all children</p>
             <div class="banner_buttons">
                 <a href="#" class="btn btn--border btn--rounded">Explore</a>
-                <a href="#" class="btn btn--primary btn--rounded">Buy Tickets</a>
+                <a href="#" class="btn btn--primary btn--rounded has-shadow">Buy Tickets</a>
             </div>
+        </div>
+    </section>
+    <section class="category">
+        <div class="container">
+            <ul class="category_list">
+                <li class="category_item">
+                    <img src="https://yamicomputer.com/image/data/tintuc-ngoc/hinh-nen-may-tinh-dep-full-hd-2.jpg" alt="" class="category_image">
+                    <h3 class="category_name">The playground, design by nonprofit organization to be accessible for all children</h3>
+                    <a href="#" class="category_details">
+                        Glutten Free <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </li>
+                <li class="category_item">
+                    <img src="https://yamicomputer.com/image/data/tintuc-ngoc/hinh-nen-may-tinh-dep-full-hd-2.jpg" alt="" class="category_image">
+                    <h3 class="category_name">Safe Rides</h3>
+                    <a href="#" class="category_details">
+                        Glutten Free <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </li>
+                <li class="category_item">
+                    <img src="https://yamicomputer.com/image/data/tintuc-ngoc/hinh-nen-may-tinh-dep-full-hd-2.jpg" alt="" class="category_image">
+                    <h3 class="category_name">Safe Rides</h3>
+                    <a href="#" class="category_details">
+                        Glutten Free <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </li>
+                <li class="category_item">
+                    <img src="https://yamicomputer.com/image/data/tintuc-ngoc/hinh-nen-may-tinh-dep-full-hd-2.jpg" alt="" class="category_image">
+                    <h3 class="category_name">Safe Rides</h3>
+                    <a href="#" class="category_details">
+                        Glutten Free <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 </div>
